--- a/src/snippets/article-card.liquid
+++ b/src/snippets/article-card.liquid
@@ -14,14 +14,14 @@
 {% if article and article != blank %}
   <div class="mb-3">
     {% if article.image %}
-      <div class="mb-4">
+      <div class="mb-4 mb-md-0">
         <a href="{{ article.url }}">
           {% assign image = article.image.src | img_url: '400x' %}
-          
+          {% assign image_alt_text = article.image.alt %}
           {% render 'image-object'
-                    id: article.id,
                     image_url_small: image,
                     image_url_large: image,
+                    image_alt_text: image_alt_text,
                     image_aspect_ratio: '1by1'
           %}
         </a>
