Integrated native alt tag logic into image object

--- a/src/sections/media-promo.liquid
+++ b/src/sections/media-promo.liquid
@@ -24,7 +24,13 @@
           { "value": "", "label": "100% wide at all breakpoints"}
         ],
         "default": "container-xl"
-      },      
+      },   
+      {
+        "type": "checkbox",
+        "id": "vertically_padded_content",
+        "label": "Define if content will be vertically flush or have padding (5rem)",
+        "default": true
+      },              
       { 
         "type": "select",
         "id": "content_order_large",
