--- a/src/sections/text-content.liquid
+++ b/src/sections/text-content.liquid
@@ -25,6 +25,12 @@
         "default": "container-xl"
       },
       {
+        "type": "checkbox",
+        "id": "vertically_padded_content",
+        "label": "Define if content will be vertically flush or have padding (5rem)",
+        "default": true
+      },        
+      {
         "type":   "range",
         "label": "Padding top - small devices",
         "id": "padding_top",
