--- a/src/snippets/section-icon-pool.liquid
+++ b/src/snippets/section-icon-pool.liquid
@@ -61,8 +61,11 @@
 {% assign container = section.settings.container %}
 
 {% comment %} Container Classes {% endcomment %}
+{% assign vertically_padded_content = section.settings.vertically_padded_content %}
 {% assign container_classes = container %}
-{% assign container_classes = container_classes | append: ' py-5'%}
+{% if vertically_padded_content %}
+  {% assign container_classes = container_classes | append: ' py-5'%}
+{% endif %}
 
 {% comment %} Slideshow Data Attributes {% endcomment %}
 {% assign slideshow_delay = section.settings.slideshow_delay %}
