--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -190,9 +190,10 @@
           { "value": "badge-danger", "label": "Danger"},
           { "value": "badge-warning", "label": "Warning"},
           { "value": "badge-info", "label": "Info"},
-          { "value": "badge-light", "label": "Light"}
+          { "value": "badge-light", "label": "Light"},
+          { "value": "badge-dark", "label": "Dark"}
         ]
-      },      
+      }, 
       {
         "type": "text",
         "id": "display_text",
