--- a/src/sections/icon-pool.liquid
+++ b/src/sections/icon-pool.liquid
@@ -166,7 +166,8 @@
           { "value": "badge-danger", "label": "Danger"},
           { "value": "badge-warning", "label": "Warning"},
           { "value": "badge-info", "label": "Info"},
-          { "value": "badge-light", "label": "Light"}
+          { "value": "badge-light", "label": "Light"},
+          { "value": "badge-dark", "label": "Dark"}
         ]
       }, 
       {
@@ -299,12 +300,7 @@
             "type": "image_picker",
             "id": "image",
             "label": "Image"
-          },
-          {
-            "type": "url",
-            "id": "url",
-            "label": "URL"
-          }          
+          }   
         ]
       }
     ],    
