--- a/src/sections/media-mosaic.liquid
+++ b/src/sections/media-mosaic.liquid
@@ -193,7 +193,8 @@
           { "value": "badge-danger", "label": "Danger"},
           { "value": "badge-warning", "label": "Warning"},
           { "value": "badge-info", "label": "Info"},
-          { "value": "badge-light", "label": "Light"}
+          { "value": "badge-light", "label": "Light"},
+          { "value": "badge-dark", "label": "Dark"}
         ]
       }, 
       {
