Minor section tweaks

--- a/src/snippets/eyebrow-text.liquid
+++ b/src/snippets/eyebrow-text.liquid
@@ -15,7 +15,7 @@
 {% endcomment %}
 
 {% comment %} Class defaults {% endcomment %}
-{% assign classes = 'badge'%}
+{% assign classes = 'mb-1 badge'%}
 
 {% if badge_style != blank %}
   {% assign classes = classes | append: ' ' | append: badge_style %}
