--- a/src/snippets/product-card.liquid
+++ b/src/snippets/product-card.liquid
@@ -33,13 +33,13 @@
   </div>
   <div class="d-flex flex-column flex-md-row justify-content-between">
     <a href="{{ url | within: collection }}" class="link-unstyled">
-      <p class="mb-0">{{ title }}</p>
+      <p class="mb-0 text-body">{{ title }}</p>
       {% if excerpt != blank %}
-        <p class="small">{{ excerpt }}</p>
+        <p class="small text-body">{{ excerpt }}</p>
       {% endif %}
     </a>
 
-    <p class="mb-0">
+    <p class="mb-0 text-body">
       {% if compare_at_price > price %}
         {% if price_varies %}
           {%- assign sale_price = price | money_without_trailing_zeros -%}
