--- a/src/snippets/product-card.liquid
+++ b/src/snippets/product-card.liquid
@@ -32,7 +32,7 @@
     </a>
   </div>
   <div class="d-flex flex-column flex-md-row justify-content-between">
-    <a href="{{ url | within: collection }}" class="link-unstyled">
+    <a href="{{ url | within: collection }}">
       <p class="mb-0 text-body">{{ title }}</p>
       {% if excerpt != blank %}
         <p class="small text-body">{{ excerpt }}</p>
