--- a/src/snippets/section-text-content.liquid
+++ b/src/snippets/section-text-content.liquid
@@ -9,6 +9,14 @@
   {% assign bg_image_url_large = blank %}
 {% endif %}
 
+{% comment %} Header Settings {% endcomment %}
+{% assign header_container_col = section.settings.header_container_col %}
+{% assign header_container_col_large = section.settings.header_container_col_large  %}
+{% assign header_container_justify_container = section.settings.header_container_justify_container %}
+{% assign header_container_justify_container_large = section.settings.header_container_justify_container_large %}
+{% assign header_container_text_alignment = section.settings.header_container_text_alignment %}
+{% assign header_container_text_alignment_large = section.settings.header_container_text_alignment_large %}
+
 {% comment %} Content Container Settings {% endcomment %}
 {% assign badge_style = section.settings.badge_style %}
 {% assign eyebrow_text = section.settings.eyebrow_text %}
@@ -25,7 +33,6 @@
 
 {% comment %} Content Container Classes {% endcomment %}
 {% assign content_classes = 'col-12' %} 
-{% assign content_classes = content_classes | append: ' ' | append: 'd-flex align-items-start flex-column justify-content-center' %}
 {% assign content_classes = content_classes | append: ' ' | append: 'py-4 py-sm-0 pr-sm-6' %}
 
 {% comment %} Section Layout Settings {% endcomment %}
@@ -117,20 +124,21 @@
     <div class="{{ container_classes }}">
       <div class="{{ row_classes }}">
         <div class="{{ content_classes }}">
-          {% render 'eyebrow-text',
-                      text: eyebrow_text,
-                      badge_style: badge_style
+          {% render 'section-header' 
+                      eyebrow_text: eyebrow_text, 
+                      badge_style: badge_style,
+                      content_color: content_color,
+                      display_text: display_text,
+                      display_style: display_style,
+                      paragraph_text: paragraph_text,
+                      col: header_container_col,
+                      col_large: header_container_col_large,
+                      justify_container: header_container_justify_container,
+                      justify_container_large: header_container_justify_container_large,
+                      text_alignment: header_container_text_alignment,
+                      text_alignment_large: header_container_text_alignment_large
           %}
-          {% render 'display-text',
-                      text: display_text,
-                      text_color: content_color,
-                      display_size: display_style
-          %}
-          {% render 'paragraph-text',
-                      text: paragraph_text,
-                      text_color: content_color
-          %}
-          <div class="{{ cta_classes }}">
+          <div class="{{ header_container_text_alignment }} {{ header_container_text_alignment_large }}">
             {% render 'cta-block',
                         cta_text_1: cta_text_1,
                         cta_url_1: cta_url_1,
