--- a/src/snippets/section-video-player.liquid
+++ b/src/snippets/section-video-player.liquid
@@ -24,14 +24,22 @@
 {% assign display_text = section.settings.display_text %}
 {% assign content_color = section.settings.content_color %}
 {% assign paragraph_text = section.settings.paragraph_text %}
-{% assign video_url = section.settings.video_url %}
-{% assign video_aspect_ratio = section.settings.video_aspect_ratio %}
 {% assign cta_text_1 = section.settings.cta_text_1 %}
 {% assign cta_url_1 = section.settings.cta_url_1 %}
 {% assign cta_type_1 = section.settings.cta_type_1 %}
 {% assign cta_text_2 = section.settings.cta_text_2 %}
 {% assign cta_url_2 = section.settings.cta_url_2 %}
 {% assign cta_type_2 = section.settings.cta_type_2 %}
+
+{% comment %} Video Container Settings {% endcomment %}
+{% assign video_url = section.settings.video_url %}
+{% assign video_aspect_ratio = section.settings.video_aspect_ratio %}
+{% assign video_container_col = section.settings.header_container_col %}
+{% assign video_container_col_large = section.settings.video_container_col_large  %}
+{% assign video_container_justify_container = section.settings.video_container_justify_container %}
+{% assign video_container_justify_container_large = section.settings.video_container_justify_container_large %}
+{% assign video_container_text_alignment = section.settings.video_container_text_alignment %}
+{% assign video_container_text_alignment_large = section.settings.video_container_text_alignment_large %}
 
 {% comment %} Content Container Classes {% endcomment %}
 {% assign content_classes = 'col-12' %} 
@@ -149,7 +157,16 @@
       </div>
       <div class="{{ row_classes }}">
         <div class="{{ video_classes }}">
-          {% render 'video-object' video_url: video_url, video_aspect_ratio: video_aspect_ratio %}
+          {% render 'video-object' 
+                      video_url: video_url, 
+                      video_aspect_ratio: video_aspect_ratio,
+                      col: video_container_col,
+                      col_large: video_container_col_large,
+                      justify_container: video_container_justify_container,
+                      justify_container_large: video_container_justify_container_large,
+                      text_alignment: video_container_text_alignment,
+                      text_alignment_large: video_container_text_alignment_large
+          %}
         </div>
       </div>
       <div class="{{ row_classes }}">
@@ -158,10 +175,7 @@
             {% render 'cta-block',
                         cta_text_1: cta_text_1,
                         cta_url_1: cta_url_1,
-                        cta_type_1: cta_type_1,
-                        cta_text_2: cta_text_2,
-                        cta_url_2: cta_url_2,
-                        cta_type_2: cta_type_2
+                        cta_type_1: cta_type_1
             %}
           </div>
         </div>
