--- a/src/snippets/video-object.liquid
+++ b/src/snippets/video-object.liquid
@@ -14,6 +14,37 @@
 {% endcomment %}
 
 {% comment %} Class defaults {% endcomment %}
+{% if col != blank %}
+  {% assign col = col %}
+{% else %}
+  {% assign col = '12' %}
+{% endif %}
+
+{% if col_large != blank %}
+  {% assign col_large = col_large %}
+{% else %}
+  {% assign col_large = '8' %}
+{% endif %}
+
+{% assign container_col_classes =  'col-' | append: col %}
+{% assign container_col_classes =  container_col_classes | append: ' col-md-' | append: col_large %}
+
+{% if justify_container != blank %}
+  {% assign justify_container = justify_container %}
+{% else %}
+  {% assign justify_container = 'justify-content-center' %}
+{% endif %}
+
+{% if justify_container_large != blank %}
+  {% assign justify_container_large = justify_container_large %}
+{% else %}
+  {% assign justify_container_large = 'justify-content-md-center' %}
+{% endif %}
+
+{% assign container_classes = 'd-flex' %}
+{% assign container_classes = container_classes | append: ' ' | append: justify_container %}
+{% assign container_classes = container_classes | append: ' ' | append: justify_container_large %}
+
 {% assign classes = 'embed-responsive' %}
 
 {% if video_aspect_ratio != blank %}
@@ -25,10 +56,14 @@
 {% assign responsive_item_classes = 'embed-responsive-item' %}
 
 {% comment %} HTML content {% endcomment %}
-<div class="{{ classes }}">
-  {% if video_url.type == 'youtube' %}
-    <iframe class="{{ responsive_item_classes }}" width="560" height="315" src="https://www.youtube.com/embed/{{ video_url.id }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  {% elsif video_url.type == 'vimeo' %}    
-    <iframe class="{{ responsive_item_classes }}" src="https://player.vimeo.com/video/{{ video_url.id }}" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-  {% endif %}
+<div class="{{ container_classes }}"> 
+  <div class="{{ container_col_classes }}">
+    <div class="{{ classes }}">
+      {% if video_url.type == 'youtube' %}
+        <iframe class="{{ responsive_item_classes }}" width="560" height="315" src="https://www.youtube.com/embed/{{ video_url.id }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      {% elsif video_url.type == 'vimeo' %}    
+        <iframe class="{{ responsive_item_classes }}" src="https://player.vimeo.com/video/{{ video_url.id }}" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      {% endif %}
+    </div>
+  </div>
 </div>
