Implemented basic boostrap nav

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -20,7 +20,10 @@
 <body>
 
   {% section 'header' %}
+  
+  <div class="mt-5 pt-2">
+    {{ content_for_layout }}
+  </div>
 
-  {{ content_for_layout }}
 </body>
 </html>
