--- a/src/snippets/section-category-grid.liquid
+++ b/src/snippets/section-category-grid.liquid
@@ -120,7 +120,7 @@
   <div class="{{ container_classes }}">
     <div class="row mb-4">
       <div class="col-12">
-        {% render 'section-header' 
+        {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
                     badge_style: badge_style,
                     content_color: content_color,
