--- a/src/snippets/section-media-grid.liquid
+++ b/src/snippets/section-media-grid.liquid
@@ -122,7 +122,7 @@
       {% comment %} TODO - Add render check here {% endcomment %}
     <div class="row mb-3">
       <div class="col-12">
-        {% render 'section-header' 
+        {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
                     badge_style: badge_style,
                     content_color: content_color,
