--- a/src/snippets/section-media-promo.liquid
+++ b/src/snippets/section-media-promo.liquid
@@ -197,7 +197,7 @@
             %}
           {% endif %}
           <div class="{{ content_classes }}">
-            {% render 'section-header' 
+            {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
                     badge_style: badge_style,
                     content_color: content_color,
