--- a/src/snippets/section-video-player.liquid
+++ b/src/snippets/section-video-player.liquid
@@ -135,11 +135,11 @@
         }
       </style>
     {% endif %}    
-
+ 
     <div class="{{ container_classes }}">
       <div class="{{ row_classes }}">
         <div class="{{ content_classes }}">
-          {% render 'section-header' 
+          {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
                     badge_style: badge_style,
                     content_color: content_color,
