--- a/src/snippets/section-article-list.liquid
+++ b/src/snippets/section-article-list.liquid
@@ -108,7 +108,7 @@
   <div class="{{ container_classes }}">
     <div class="row">
       <div class="col-12">
-        {% render 'section-header' 
+        {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
                     badge_style: badge_style,
                     content_color: content_color,
