--- a/src/snippets/section-icon-pool.liquid
+++ b/src/snippets/section-icon-pool.liquid
@@ -119,7 +119,7 @@
   <div class="{{ container_classes }}">
     <div class="row mb-3">
       <div class="col-12">
-        {% render 'section-header' 
+        {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
                     badge_style: badge_style,
                     content_color: content_color,
