--- a/src/snippets/section-image-content.liquid
+++ b/src/snippets/section-image-content.liquid
@@ -158,7 +158,7 @@
         </div>
         <div class="{{ content_container_wrapper_classes }}">
           <div class="{{ content_classes }}">
-            {% render 'section-header' 
+            {% render 'content-object' 
                     eyebrow_text: eyebrow_text, 
                     badge_style: badge_style,
                     content_color: content_color,
