--- a/src/snippets/product-categories.liquid
+++ b/src/snippets/product-categories.liquid
@@ -17,7 +17,7 @@
         <li class="mb-4">
           <div class="row">
             <div class="col">
-              <p class="h4 border-bottom">Category I</p>
+              <p class="h4 border-bottom">{{ product.metafields.global.meta_title_primary }}</p>
             </div>
           </div>
           <div class="row">
@@ -25,14 +25,14 @@
               <img src="{{ 'icon-check.svg' | asset_url }}" style="width:25px;" alt="Check icon">
             </div>
             <div class="col-8">
-              <span class="small">{{ product.metafields.global.category_primary }}</span>
+              <span class="small">{{ product.metafields.global.meta_content_primary }}</span>
             </div>
           </div>           
         </li>      
         <li class="mb-4">
           <div class="row">
             <div class="col">
-              <p class="h4 border-bottom">Category II</p>
+              <p class="h4 border-bottom">{{ product.metafields.global.meta_title_secondary }}</p>
             </div>
           </div>
           <div class="row">
@@ -40,14 +40,14 @@
               <img src="{{ 'icon-check.svg' | asset_url }}" style="width:25px;" alt="Size icon">
             </div>
             <div class="col-8">
-              <span class="small">{{ product.metafields.global.category_secondary }}</span>
+              <span class="small">{{ product.metafields.global.meta_content_secondary }}</span>
             </div>
           </div>              
         </li>      
         <li class="mb-4">
           <div class="row">
             <div class="col">
-              <p class="h4 border-bottom">Category III</p>
+              <p class="h4 border-bottom">{{ product.metafields.global.meta_title_tertiary }}</p>
             </div>
           </div>
           <div class="row">
@@ -55,7 +55,7 @@
               <img src="{{ 'icon-check.svg' | asset_url }}" style="width:25px;" alt="Light Required icon">
             </div>
             <div class="col-8">
-              <span class="small">{{ product.metafields.global.category_tertiary }}</span>
+              <span class="small">{{ product.metafields.global.meta_content_tertiary }}</span>
             </div>
           </div>              
         </li>
